grammar.txt
program : NONE
        | defs

defs : def
     | def defs

def : classDef
    | funcDef
    | varDef



classDef : CLASS IDENTIFIER OCURLY program CCURLY
         | subclassDef

subclassDef : CLASS IDENTIFIER EXTENDS IDENTIFIER OCURLY program CCURLY



funcDef : DEFINE IDENTIFIER funcBody

funcBody: OPAREN optParamsList CPAREN block

optParamsList : NONE
              | paramsList

paramsList : VAR IDENTIFIER
           | VAR IDENTIFIER COMMA paramsList



varDef : VAR IDENTIFIER optAssignment SEMICOLON

optAssignment : NONE
              | ASSIGN expression



block : OCURLY optStatements CCURLY
      | statement

optStatements : NONE
              | statements

statements : statement
           | statement statements

statement : definition
	  | condBlock
          | whileBlock
          | returnStatement
          | expression  SEMICOLON

condStatement : IF OPAREN expression CPAREN block |
              : IF OPAREN expression CPAREN block ELSE block

whileStatement : WHILE OPAREN expression CPAREN block

returnStatement : RETURN expression SEMICOLON
                | RETURN SEMICOLON



expression : unary optOperation
	   | unary operator expression 


optOperation: NONE
	    | operator expression

operator : PLUS
         | TIMES
         | MINUS
         | DIV
         | MOD
         | LT
         | LTE
	 | NEQ
         | EQ
         | GTE
         | GT
         | ASSIGN
         | DOT
         | AND
         | OR


optExprList : NONE
            | exprList

exprList : expression
         | expression COMMA exprList


unary: UMINUS unary
     | NOT    unary
     | OPAREN expression CPAREN
     | idOperation
     | array
     | anonFunction
     | IDENTIFIER
     | boolean
     | INTEGER
     | STRING


idOperation: IDENTIFIER
           | IDENTIFIER OPAREN optExprList CPAREN
           | IDENTIFIER OBRACK expression CBRACK


array : OBRACK exprList CBRACK

anonFunction : LAMBDA funcBody

boolean : TRUE
        | FALSE
